fix(LandHero): align meta items to start

--- a/src/pages/Land/LandHero.module.scss
+++ b/src/pages/Land/LandHero.module.scss
@@ -19,7 +19,7 @@
 .meta {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   gap: var(--size-24);
 
   &Avatar {
